--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Bot Interface</title>
+    <title>Wallt Project</title>
     
     <!-- Importing Modular CSS Files -->
     <link rel="stylesheet" href="global.css">
@@ -25,9 +25,9 @@
         <h2 class="help-title" id="writingTitle">✦</h2>
         <div class="help-buttons">
             <button class="help-button animate-button" onclick="sendButtonMessage('Integra (2x)²')">🧮 Integra (2x)²</button>
-            <button class="help-button animate-button" onclick="sendButtonMessage('Contesta mi examen')">🧭 Contesta mi examen</button>
-            <button class="help-button animate-button" onclick="sendButtonMessage('¿Qué es Gauss-Jordan?')">📊 ¿Qué es Gauss-Jordan?</button>
-            <button class="help-button animate-button" onclick="sendButtonMessage('Haz un resumen')">✏️ Haz un resumen</button>
+            <button class="help-button animate-button" onclick="sendButtonMessage('Viajes a Cranbrook')">🧭 Viajes a Cranbrook</button>
+            <button class="help-button animate-button" onclick="sendButtonMessage('Ayúdame a programar')">🧑‍💻 Coding Advice</button>
+            <button class="help-button animate-button" onclick="sendButtonMessage('¿Quién te creó?')">🧐 ¿Quién te creó?</button>
             <button class="help-button animate-button" onclick="sendButtonMessage('Juguemos a algo')">🕹️ Juguemos a algo</button>
             <button class="help-button animate-button" onclick="sendButtonMessage('¿Que puedes hacer?')">💬 Más</button>
         </div>
