--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wallt Project</title>
+    <title>WAALT Project</title>
     
     <!-- Importing Modular CSS Files -->
     <link rel="stylesheet" href="global.css">
